# paddle-ocr-capi

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
examples/c/: example.c
examples/python/: README.md  example.py  ocr_wrapper.py  requirements.txt
examples/swift/: README.md
examples/swift/ocr-rs-capi-example/ocr-rs-capi-example/: ContentView.swift  OcrBridging-Header.h  OcrEngine.swift  ocr_rs_capi_exampleApp.swift
examples/swift/ocr-rs-capi-example/ocr-rs-capi-example.xcodeproj/: project.pbxproj
examples/swift/ocr-rs-capi-example/ocr-rs-capi-example.xcodeproj/project.xcworkspace/xcuserdata/chenzibo.xcuserdatad/: UserInterfaceState.xcuserstate
examples/swift/ocr-rs-capi-example/ocr-rs-capi-example.xcodeproj/xcshareddata/xcschemes/: ocr-rs-capi-example.xcscheme
examples/swift/ocr-rs-capi-example/ocr-rs-capi-example.xcodeproj/xcuserdata/chenzibo.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: ocr_capi.h
src/: lib.rs
