[package]
name = "ocr_capi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []
metal = ["ocr-rs/metal"]
opencl = ["ocr-rs/opencl"]
opengl = ["ocr-rs/opengl"]
vulkan = ["ocr-rs/vulkan"]
cuda = ["ocr-rs/cuda"]
coreml = ["ocr-rs/coreml"]

[dependencies]
ocr-rs = { git = "https://github.com/zibo-chen/rust-paddle-ocr", branch = "next" }
libc = "0.2"
image = "0.25"
